Fixed: most layout problems with StructureView in Electron
And I'm ready to punch my face in.

--- a/css/ncoda/julius.less
+++ b/css/ncoda/julius.less
@@ -23,6 +23,7 @@
 //-------------------------------------------------------------------------------------------------
 
 
+@import "height_of_global_menubar.less";
 @import "colours.less";
 
 
@@ -119,6 +120,8 @@ h2, h3 {
     flex-flow: row;
     align-items: center;
     justify-content: space-between;
+
+    height: @global-menubar-height;
 }
 
 .ncoda-logo {
