--- a/css/ncoda/structure_view.less
+++ b/css/ncoda/structure_view.less
@@ -22,6 +22,7 @@
 // along with this program.  If not, see <http://www.gnu.org/licenses/>.
 //-------------------------------------------------------------------------------------------------
 
+@import "height_of_global_menubar.less";
 @import "colours.less";
 
 /*************************************************************************************************/
@@ -41,37 +42,29 @@
 /*************************************************************************************************/
 /* Shared stuff */
 
-.ncoda-structureview-frame {
-    /* This contains the menus and #ncoda-structureview. It exists basically to ensure that the
+#nc-strv-frame {
+    /* This contains the menus and #nc-structureview. It exists basically to ensure that the
      * menus don't interfere with the StructureView flexbox layout.
      */
-    height: 100%;
-}
-
-#ncoda-structureview {
+    flex: 1 1 0%;
     background: @solarized-base02;
-    margin: 0;
-    height: 100%;
     display: flex;
-    flex-flow: column nowrap;
-    justify-content: space-between;
+    flex-flow: column;
+    align-items: stretch;
+}
+
+#nc-strv-corner-menus {
+    z-index: 500;
+    flex: 0 0 0;
+}
+
+#nc-strv-view {
+    z-index: 250;
+    flex: 1 1 auto;
+    display: flex;
+    flex-flow: column;
+    justify-content: space-around;
     align-items: center;
-    color: @strv-text;
-}
-
-.ncoda-structureview > header {
-    width: 100%;
-    display: flex;
-    flex-flow: row nowrap;
-    justify-content: space-between;
-}
-
-.ncoda-structureview > footer {
-    width: 100%;
-    display: flex;
-    flex-flow: row nowrap;
-    justify-content: space-between;
-    max-height: 50%;
 }
 
 
@@ -79,76 +72,74 @@
 /* active section <article> */
 .ncoda-active-sections {
     z-index: 1;
-    max-width: 95%;
     background: @strv-widget-background;
-    border: 1px solid @strv-widget-border;
+    border: 0.1rem solid @strv-widget-border;
     box-shadow: 0 0 1rem @strv-widget-shadow;
-    border-radius: 5px;
+    border-radius: 0.5rem;
 }
 .ncoda-active-sections > header {
-    height: 7%;
+    height: 2rem;
     text-align: center;
     font-size: x-large;
 }
-.ncoda-active-sections > content{
-    padding: 1% 1%;
+.ncoda-active-sections > content {
+    padding: 1rem;
     display: flex;
     flex-flow: row nowrap;
     justify-content: center;
-    align-items: center;
-    height: 93%;
+    align-items: stretch;
 }
 
 /*************************************************************************************************/
 /* <article> corresponding to an MEI <section> */
-.ncoda-mei-section {
+.nc-strv-section {
     display: flex;
     background: @strv-widget-background;
-    border: 1px solid @strv-inner-line;
-    border-top: 5px solid @strv-widget-background;
+    border: 0.1rem solid @strv-inner-line;
+    border-top: 0.35rem solid @strv-widget-background;
     z-index: 3;
-    height: 100%;
-    max-height: 20em;
 
     flex-flow: column nowrap;
     justify-content: space-between;
     transition: border-top 0.25s;
 }
-.ncoda-mei-section header {
-    padding: 2% 5%;
-    border-top: 1px solid @strv-inner-line;
+
+.nc-strv-section header {
+    padding: 0.25rem;
+    border-top: 0.1rem solid @strv-inner-line;
     display: flex;
     flex-flow: row;
     justify-content: space-between;
 }
-.ncoda-mei-section footer { margin: 5%; }
-.ncoda-mei-section time { font-size: smaller; }
-.ncoda-mei-section:hover { border-top-color: @strv-primary; }
-.ncoda-mei-section-img { flex-grow: 1; width: 175px; display: block; overflow: hidden; }
-.ncoda-mei-section img { width: 100%; }
+.nc-strv-section header span { flex: 1 0; }
+.ncoda-section-colour { flex: 6 1; }
 
-.ncoda-section-colour {
-    min-width: 1rem;
-    max-width: 8rem;
-    height: 100%;
-    flex-grow: 1;
-    flex-shrink: 1;
-}
+.nc-strv-section footer { margin: 0.4rem; }
+.nc-strv-section time { font-size: smaller; }
+.nc-strv-section:hover { border-top-color: @strv-primary; }
+.nc-strv-section-img { flex: 1; width: 10rem; display: block; overflow: hidden; }
+.nc-strv-section img { width: 100%; }
 
 /* context menu when clicking on a <section>-corresponding <article> */
 #ncoda-section-menu {
     display: none;
     position: absolute;
-    z-index: 50;
+    z-index: 251;  // just above the corner menus
 }
 #ncoda-section-menu a {
     cursor: default;
 }
 
 /*************************************************************************************************/
-/* StructureView menus */
+/* StructureView Corner Menus */
 .nc-strv-menu {
     background: @strv-widget-background;
+    display: flex;
+    flex-flow: column;
+    justify-content: flex-start;
+    position: absolute;
+    max-width: 80%;
+    max-height: 80%;
 }
 .nc-strv-menu .header {
     cursor: default;
@@ -190,11 +181,18 @@
     color: @strv-secondary;
 }
 
+//////////////////////////////////////////////////////////
+// Header Bar
+#nc-strv-header-bar {
+    top: @global-menubar-height;
+    left: 0;
+}
 
 //////////////////////////////////////////////////////////
 // Expanded Section View
 #nc-strv-expanded-section {
-    max-width: 50%;
+    top: @global-menubar-height;
+    right: 0;
 }
 #ncoda-expanded-section-svg h2 {
     margin: 0;
@@ -209,33 +207,40 @@
 
 //////////////////////////////////////////////////////////
 // Collaborators
-.nc-strv-collaboration address {
+#nc-strv-collaboration {
+    bottom: 0;
+    right: 0;
+}
+#nc-strv-collaboration address {
     border-bottom: 1px solid @strv-inner-line;
 }
-.nc-strv-collaboration > div {
+#nc-strv-collaboration > div {
     margin: 1rem;
 }
-.nc-strv-collaboration ul {
+#nc-strv-collaboration ul {
     margin: 0.5rem 0;
     list-style-type: none;
     padding-left: 1rem;
 }
-.nc-strv-collaboration li:hover {
+#nc-strv-collaboration li:hover {
     border-color: @strv-widget-background;
 }
 
 
 //////////////////////////////////////////////////////////
 // Staves Structure
-.nc-strv-staves ul {
+#nc-strv-staves {
+    bottom: 0;
+    left: 0;
+}
+#nc-strv-staves > ul {
+    overflow-y: scroll;
+}
+#nc-strv-staves ul {
     list-style-type: none;
     padding-left: 0;
     margin-left: 1rem;
     border-left: 0.2rem solid @strv-primary;
-}
-#staves-instruments {
-    overflow: scroll;
-    height: 100%;
 }
 #staves-instruments ul {
     padding: 0;
